# kookit

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: build.yaml
kookit/: __init__.py  interfaces.py  kookit.py  utils.py
kookit/http_kookit/: interfaces.py  kookit.py  response_group.py  server.py  service.py
kookit/http_kookit/models/: json_request.py  request.py  response.py
kookit/http_models/: __init__.py  json_request.py  request.py  response.py
kookit/http_response/: __init__.py  json_response.py  response.py
kookit/http_service/: __init__.py  actions_parser.py  handler.py  interfaces.py  request_runner.py  requests_diff.py  response_group.py  service.py
kookit/http_service/http_handler/: __init__.py  handler.py
kookit/http_services/: __init__.py  client_side.py  handler.py  service.py
kookit/main/: __init__.py  client_side.py  interfaces.py  kookit.py  server.py
kookit/main/http_kookit/: kookit.py  server.py
kookit/responses/: __init__.py  http_callback.py  http_json_response.py
kookit/services/: __init__.py  http_handler.py  http_service.py
tests/http_kookit/: conftest.py  test_add_router_inside_lifespan.py  test_diff_headers_and_path_template_response.py  test_error_in_lifespan.py  test_extra_request_error.py  test_handlers_merge_ok.py  test_http_with_uuid.py  test_infinite_task_terminate.py  test_request_matches_error.py  test_request_matches_ok.py  test_request_not_found.py  test_response_before_next_request.py  test_response_groups_creation.py  test_service_circle_request.py  test_service_custom_router.py  test_service_request_ok.py  test_service_response.py  test_single_http_service_start.py  test_unused_responses_error.py
tests/http_service/: conftest.py  test_diff_headers_and_path_template_response.py  test_extra_request_error.py  test_handlers_merge_ok.py  test_request_matches_error.py  test_request_matches_ok.py  test_request_not_found.py  test_response_before_next_request.py  test_service_circle_request.py  test_service_custom_router.py  test_service_request_ok.py  test_service_response.py  test_service_response_requests_client.py  test_single_http_service_start.py  test_unused_responses_error.py
tests/http_service/actions_parser/: test_parse_actions.py
tests/http_service/http_handler/: test_http_handler_init.py
tests/http_service/request_diff/: test_request_diff.py
tests/http_service/request_runner/: test_request_delay.py  test_run_requests.py
tests/http_services/: test_extra_request_error.py  test_service_response.py  test_service_response_requests_client.py
tests/services/http/: test_service_response.py
